--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
     </head>
     <body>
         <header>
-            <div class="left">
-                <h3>Bem Vindo!</h3>
-                <h1>PetShop Salchichinha</h1>
-            </div>
-            <div class="right">
-                <img src="img/salsichinha.png">
+            <div class="meio">
+                <div class="flex">
+                    <h3>Bem Vindo!</h3>
+                    <h1>PetShop Salchichinha</h1>
+                </div>
+                <div class="flex">
+                    <img src="img/salsichinha.png">
+                </div>
             </div>
         </header>
         <div id="content">
